update .clef-login-container z-index to 99999 to prevent other login plugins from overlaying it

--- a/assets/src/sass/main.scss
+++ b/assets/src/sass/main.scss
@@ -77,6 +77,7 @@
         height: 100%;
         background: white;
         overflow: visible;
+        z-index: 99999;
 
         .clef-button-container {
             padding-top: 5px;
